[project]
name = "highlight"
version = "0.0.0"
description = "Colorize text in your terminal :rainbow:"
authors = [{ "name" = "Terry Spotts", "email" = "tspotts@etsy.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1"]

[project.scripts]
highlight = "highlight:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.flit.module]
name = "highlight"
